--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,34 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="407dp"
-        android:layout_height="714dp"
+        android:layout_width="408dp"
+        android:layout_height="731dp"
         app:srcCompat="@drawable/download__1_"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="16dp" />
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="0dp" />
 
-    <Button
-        android:id="@+id/button"
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        app:srcCompat="@drawable/modern_technology_clock_logo_removebg_preview"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="-31dp" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="409dp" />
+
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register"
         tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="354dp" />
+        tools:layout_editor_absoluteY="497dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
