--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/edtEmailAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -26,8 +26,8 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:text="Email"
-        app:layout_constraintBottom_toTopOf="@+id/Password"
-        app:layout_constraintStart_toStartOf="@+id/Password" />
+        app:layout_constraintBottom_toTopOf="@+id/edtNewPassword"
+        app:layout_constraintStart_toStartOf="@+id/edtNewPassword" />
 
     <Button
         android:id="@+id/btnReset"
@@ -37,10 +37,10 @@
         android:text="Reset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword" />
 
     <EditText
-        android:id="@+id/Password"
+        android:id="@+id/edtNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -48,11 +48,11 @@
         android:ems="10"
         android:inputType="text"
         android:text="Password"
-        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
-        app:layout_constraintStart_toStartOf="@+id/confirmPassword" />
+        app:layout_constraintBottom_toTopOf="@+id/edtConfirmPassword"
+        app:layout_constraintStart_toStartOf="@+id/edtConfirmPassword" />
 
     <EditText
-        android:id="@+id/confirmPassword"
+        android:id="@+id/edtConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="257dp"
