--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,38 +5,40 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomePage"
-    android:background="@drawable/welcometochronolog"
-    >
+    android:background="@drawable/bg"
+    tools:context=".MainPage">
 
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="226dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="272dp"
+        android:layout_marginBottom="39dp"
+        android:text="Category"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnSigninHomepg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="16dp"
-        android:text="Sign in"
-        app:layout_constraintBottom_toTopOf="@+id/btnRegisterHomepg"
-        app:layout_constraintEnd_toEndOf="@+id/btnRegisterHomepg" />
+        android:id="@+id/button7"
+        android:layout_width="221dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="37dp"
+        android:text="Set Goal"
+        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <Button
-        android:id="@+id/btnRegisterHomepg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="141dp"
-        android:text="Register"
+        android:id="@+id/button8"
+        android:layout_width="227dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="122dp"
+        android:text="Daily Goal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
