--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -10,11 +10,11 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="226dp"
-        android:layout_height="0dp"
+        android:layout_width="152dp"
+        android:layout_height="43dp"
         android:layout_marginTop="272dp"
         android:layout_marginBottom="39dp"
-        android:text="Category"
+        android:text="Create Category"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
