Added Timesheet Functions Part 2

--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -12,33 +12,31 @@
         android:id="@+id/button6"
         android:layout_width="152dp"
         android:layout_height="43dp"
-        android:layout_marginTop="272dp"
-        android:layout_marginBottom="39dp"
         android:text="Create Category"
-        app:layout_constraintBottom_toTopOf="@+id/button7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="129dp"
+        tools:layout_editor_absoluteY="228dp" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="221dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="37dp"
+        android:layout_height="109dp"
         android:text="Set Goal"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        tools:layout_editor_absoluteX="95dp"
+        tools:layout_editor_absoluteY="484dp" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="227dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="122dp"
+        android:layout_height="109dp"
         android:text="Daily Goal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="606dp" />
+
+    <Button
+        android:id="@+id/btnAddTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Timesheet"
+        tools:layout_editor_absoluteX="132dp"
+        tools:layout_editor_absoluteY="341dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
